Add Collision handling

--- a/data/objects/obj.cfg
+++ b/data/objects/obj.cfg
@@ -1,4 +1,8 @@
-components = Position SimpleAnimation Velocity Controller
+components = Position SimpleAnimation Velocity Controller Collision
 
 [SimpleAnimation]
 sprite = data/bitmaps/test.cfg
+
+[Collision]
+top_left = 0 0
+bottom_right = 32 32
