--- a/data/objects/obj.cfg
+++ b/data/objects/obj.cfg
@@ -1,7 +1,15 @@
-components = Position SimpleAnimation Velocity Controller Collision
+components = Position SimpleAnimation Velocity Controller Collision Direction Moving
 
 [SimpleAnimation]
-sprite = data/bitmaps/test.cfg
+stand_left = data/bitmaps/player_stand_left.png
+stand_right = data/bitmaps/player_stand_right.png
+stand_up = data/bitmaps/player_stand_up.png
+stand_down = data/bitmaps/player_stand_down.png
+
+walk_left = data/bitmaps/player_walk_left.cfg
+walk_right = data/bitmaps/player_walk_right.cfg
+walk_up = data/bitmaps/player_walk_up.cfg
+walk_down = data/bitmaps/player_walk_down.cfg
 
 [Collision]
 top_left = 0 0
