Attacking animation and sprite improvements

--- a/data/objects/obj.cfg
+++ b/data/objects/obj.cfg
@@ -1,4 +1,4 @@
-components = Position SimpleAnimation Velocity Controller Collision Direction Moving
+components = Position SimpleAnimation Velocity Controller Collision Direction Moving Attacking
 
 [SimpleAnimation]
 stand_left = data/bitmaps/player_stand_left.png
@@ -11,6 +11,11 @@ walk_right = data/bitmaps/player_walk_right.cfg
 walk_up = data/bitmaps/player_walk_up.cfg
 walk_down = data/bitmaps/player_walk_down.cfg
 
+attack_left = data/bitmaps/player_attack_left.cfg
+attack_right = data/bitmaps/player_attack_right.cfg
+attack_up = data/bitmaps/player_attack_up.cfg
+attack_down = data/bitmaps/player_attack_down.cfg
+
 [Collision]
 top_left = 0 0
-bottom_right = 32 32
+bottom_right = 16 32
