Added a sword weapon

--- a/data/objects/obj.cfg
+++ b/data/objects/obj.cfg
@@ -1,4 +1,4 @@
-components = Position SimpleAnimation Velocity Controller Collision Direction Moving Attacking
+components = Position SimpleAnimation Velocity Controller Collision Direction Moving Sword
 
 [SimpleAnimation]
 stand_left = data/bitmaps/player_stand_left.png
@@ -19,3 +19,7 @@ attack_down = data/bitmaps/player_attack_down.cfg
 [Collision]
 top_left = 0 0
 bottom_right = 16 32
+
+[Sword]
+range = 32
+duration = 0.2
