Start on some AI + enemies

--- a/data/objects/player.cfg
+++ b/data/objects/player.cfg
@@ -23,3 +23,7 @@ bottom_right = 16 32
 [Sword]
 range = 32
 duration = 0.2
+offset_left = 0 16
+offset_right = 16 16
+offset_up = 8 0
+offset_down = 8 32
