Lots of changes. Killing and damage and a combo counter added.

--- a/data/objects/gundude.cfg
+++ b/data/objects/gundude.cfg
@@ -1,4 +1,4 @@
-components = Position SimpleAnimation Velocity AIController Collision Direction Moving Sword
+components = Position SimpleAnimation Velocity AIController Collision Direction Moving Sword Destroyable Enemy
 
 [SimpleAnimation]
 stand_left = data/bitmaps/player_stand_left.png
@@ -27,8 +27,15 @@ offset_left = 0 16
 offset_right = 16 16
 offset_up = 8 0
 offset_down = 8 32
+damage_type=player
+min_damage = 0
+max_damage = 0
 
 [AIController]
 sense_range = 100
 wander_prob = 0.6
 pref_range_frac = 0
+
+[Destroyable]
+damage_type=enemy
+immune_dur = 0
