--- a/data/objects/player.cfg
+++ b/data/objects/player.cfg
@@ -1,4 +1,4 @@
-components = Position SimpleAnimation Velocity Controller Collision Direction Moving Sword
+components = Position SimpleAnimation Velocity Controller Collision Direction Moving Sword Destroyable
 
 [SimpleAnimation]
 stand_left = data/bitmaps/player_stand_left.png
@@ -27,3 +27,9 @@ offset_left = 0 16
 offset_right = 16 16
 offset_up = 8 0
 offset_down = 8 32
+damage_type=enemy
+min_damage = 5
+max_damage = 10
+
+[Destroyable]
+damage_type=player
