--- a/data/maps/test.cfg
+++ b/data/maps/test.cfg
@@ -6,3 +6,12 @@ height = 32
 row_0 = .╔.╔.╔..╔
 row_1 = ..╔....╔╔
 row_6 = ..........╔....╔╔
+
+[enemy_0]
+name=data/objects/gundude.cfg
+pos_0 = 8 8
+pos_1 = 9 8
+pos_2 = 10 8
+pos_3 = 8 9
+pos_4 = 9 9
+pos_5 = 10 9
