New test level, new invo graphics, more UI

--- a/data/tilesheets/test.cfg
+++ b/data/tilesheets/test.cfg
@@ -2,7 +2,14 @@ bitmap = data/bitmaps/tilesheet.png
 
 [tile_0]
 symbol=.
+solid=true
 
 [tile_1]
-symbol=╔
+symbol=x
+
+[tile_2]
+symbol=,
+
+[tile_3]
+symbol=#
 solid=true
