--- a/data/maps/test.cfg
+++ b/data/maps/test.cfg
@@ -3,9 +3,20 @@ tilesheet = data/tilesheets/test.cfg
 width = 32
 height = 32
 
-row_0 = .╔.╔.╔..╔
-row_1 = ..╔....╔╔
-row_6 = ..........╔....╔╔
+row_0  = .....................................
+row_1  = .################################....
+row_2  = .#,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,....
+row_3  = .#####,,,,,,,,,,,,,,,,,,,,,,,,,,,....
+row_4  = .....######,,,,,xxxx,,,,,,,,,,,,,....
+row_5  = ..........#,,,,,x,,x,,,,,,,,,,,,,....
+row_6  = .....######,,,,,xxxx,,,,,,,,,,,,,....
+row_7  = .....#,,,,,,,,,,,,,,,,,,,,,,,,,,,....
+row_8  = .....#,,,,,,,,,,,,,,,,,,,,,,,,,,,....
+row_9  = .....#,,,,,,,,,,,,,,,,,,,,,,,,,,,....
+row_10 = .....#,,,,,,,,,,,,,,,,,,,,,,,,,,,....
+row_11 = .....#,,,,,,,,,,,,,,,,,,,,,,,,,,,....
+row_12 = .....#,,,,,,,,,,,,,,,,,,,,,,,,,,,....
+row_13 = .....#,,,,,,,,,,,,,,,,,,,,,,,,,,,....
 
 [object_0]
 name=data/objects/gundude.cfg
