--- a/data/objects/gundude.cfg
+++ b/data/objects/gundude.cfg
@@ -1,4 +1,4 @@
-components = Position SimpleAnimation Velocity AIController Collision Direction Moving Sword Destroyable Enemy
+components = Position SimpleAnimation Velocity AIController Collision Direction Moving Gun Destroyable Enemy
 
 [SimpleAnimation]
 stand_left = data/bitmaps/player_stand_left.png
@@ -20,21 +20,22 @@ attack_down = data/bitmaps/player_attack_down.cfg
 top_left = 0 0
 bottom_right = 16 32
 
-[Sword]
-range = 32
-duration = 0.2
+[Gun]
+range = 256
+duration = 0.8
 offset_left = 0 16
 offset_right = 16 16
 offset_up = 8 0
 offset_down = 8 32
-damage_type=player
-min_damage = 0.1
-max_damage = 0.2
+bullet = data/objects/bullet.cfg
+velocity_0 = 100 -5
+velocity_1 = 100 5
 
 [AIController]
 sense_range = 100
 wander_prob = 0.6
 pref_range_frac = 0
+weapon_lineup = 20
 
 [Destroyable]
 damage_type=enemy
