Fire and explosions

--- a/data/objects/dragon.cfg
+++ b/data/objects/dragon.cfg
@@ -28,5 +28,9 @@ offset_right = 16 16
 offset_up = 8 0
 offset_down = 8 32
 damage_type=enemy
-min_damage = 5
-max_damage = 10
+min_damage = 1
+max_damage = 2
+swing_width = 16
+swing_distance = 64
+fire_breath = true
+fire_breath_explosion = data/objects/fire_jet.cfg
