--- a/data/objects/gundude.cfg
+++ b/data/objects/gundude.cfg
@@ -1,4 +1,4 @@
-components = Position SimpleAnimation Velocity AIController Collision Direction Moving Gun Destroyable Enemy
+components = Position SimpleAnimation Velocity AIController Collision Direction Moving Gun Destroyable Enemy Flammable
 
 [SimpleAnimation]
 stand_left = data/bitmaps/player_stand_left.png
@@ -40,3 +40,6 @@ weapon_lineup = 20
 [Destroyable]
 damage_type=enemy
 immune_dur = 0
+
+[Flammable]
+damage = 1
