More fire, more explosions\!

--- a/data/maps/level_0.cfg
+++ b/data/maps/level_0.cfg
@@ -6,11 +6,11 @@ height = 32
 row_0  = .....................................
 row_1  = .################################....
 row_2  = .#,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,....
-row_3  = .#####,,,,,,,,,,,,,,,,,,,,,,,,,,,....
-row_4  = .....######,,,,,xxxx,,,,,,,,,,,,,....
-row_5  = ..........#,,,,,x,,x,,,,,,,,,,,,,....
-row_6  = .....######,,,,,xxxx,,,,,,,,,,,,,....
-row_7  = .....#,,,,,,,,,,,,,,,,,,,,,,,,,,,....
+row_3  = .#,,##,,,,,,,,,,,,,,,,,,,,,,,,,,,....
+row_4  = ...,,######,,,,,xxxx,,,,,,,,,,,,,....
+row_5  = ...,,.....#,,,,,x,,x,,,,,,,,,,,,,....
+row_6  = ...,,,#####,,,,,xxxx,,,,,,,,,,,,,....
+row_7  = ...,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,....
 row_8  = .....#,,,,,,,,,,,,,,,,,,,,,,,,,,,....
 row_9  = .....#,,,,,,,,,,,,,,,,,,,,,,,,,,,....
 row_10 = .....#,,,,,,,,,,,,,,,,,,,,,,,,,,,....
