Lots of new graphics

--- a/data/objects/gundude.cfg
+++ b/data/objects/gundude.cfg
@@ -1,20 +1,20 @@
 components = Position SimpleAnimation Velocity AIController Collision Direction Moving Gun Destroyable Enemy Flammable
 
 [SimpleAnimation]
-stand_left = data/bitmaps/player_stand_left.png
-stand_right = data/bitmaps/player_stand_right.png
-stand_up = data/bitmaps/player_stand_up.png
-stand_down = data/bitmaps/player_stand_down.png
+stand_left = data/bitmaps/enemy_stand_left.png
+stand_right = data/bitmaps/enemy_stand_right.png
+stand_up = data/bitmaps/enemy_stand_up.png
+stand_down = data/bitmaps/enemy_stand_down.png
 
-walk_left = data/bitmaps/player_walk_left.cfg
-walk_right = data/bitmaps/player_walk_right.cfg
-walk_up = data/bitmaps/player_walk_up.cfg
-walk_down = data/bitmaps/player_walk_down.cfg
+walk_left = data/bitmaps/enemy_walk_left.cfg
+walk_right = data/bitmaps/enemy_walk_right.cfg
+walk_up = data/bitmaps/enemy_walk_up.cfg
+walk_down = data/bitmaps/enemy_walk_down.cfg
 
-attack_left = data/bitmaps/player_attack_left.cfg
-attack_right = data/bitmaps/player_attack_right.cfg
-attack_up = data/bitmaps/player_attack_up.cfg
-attack_down = data/bitmaps/player_attack_down.cfg
+attack_left = data/bitmaps/enemy_attack_left.cfg
+attack_right = data/bitmaps/enemy_attack_right.cfg
+attack_up = data/bitmaps/enemy_attack_up.cfg
+attack_down = data/bitmaps/enemy_attack_down.cfg
 
 [Collision]
 top_left = 0 0
@@ -23,10 +23,10 @@ bottom_right = 16 32
 [Gun]
 range = 256
 duration = 0.8
-offset_left = 0 16
-offset_right = 16 16
-offset_up = 8 0
-offset_down = 8 32
+offset_left = -4 8
+offset_right = 20 8
+offset_up = 8 -4
+offset_down = 8 36
 bullet = data/objects/bullet.cfg
 velocity_0 = 100 -5
 velocity_1 = 100 5
@@ -40,6 +40,7 @@ weapon_lineup = 20
 [Destroyable]
 damage_type=enemy
 immune_dur = 0
+explosion=data/objects/flower_explosion.cfg
 
 [Flammable]
 damage = 1
