--- a/data/objects/dragon.cfg
+++ b/data/objects/dragon.cfg
@@ -1,20 +1,20 @@
 components = Position SimpleAnimation Velocity Controller Collision Direction Moving Sword
 
 [SimpleAnimation]
-stand_left = data/bitmaps/dragon.png
-stand_right = data/bitmaps/dragon.png
-stand_up = data/bitmaps/dragon.png
-stand_down = data/bitmaps/dragon.png
+stand_left = data/bitmaps/dragon_stand_left.cfg
+stand_right = data/bitmaps/dragon_stand_right.cfg
+stand_up = data/bitmaps/dragon_stand_up.cfg
+stand_down = data/bitmaps/dragon_stand_down.cfg
 
-walk_left = data/bitmaps/dragon.png
-walk_right = data/bitmaps/dragon.png
-walk_up = data/bitmaps/dragon.png
-walk_down = data/bitmaps/dragon.png
+walk_left = data/bitmaps/dragon_walk_left.cfg
+walk_right = data/bitmaps/dragon_walk_right.cfg
+walk_up = data/bitmaps/dragon_walk_up.cfg
+walk_down = data/bitmaps/dragon_walk_down.cfg
 
-attack_left = data/bitmaps/dragon.png
-attack_right = data/bitmaps/dragon.png
-attack_up = data/bitmaps/dragon.png
-attack_down = data/bitmaps/dragon.png
+attack_left = data/bitmaps/dragon_stand_left.cfg
+attack_right = data/bitmaps/dragon_stand_right.cfg
+attack_up = data/bitmaps/dragon_stand_up.cfg
+attack_down = data/bitmaps/dragon_stand_down.cfg
 
 [Collision]
 top_left = 0 0
