--- a/data/maps/level_0.cfg
+++ b/data/maps/level_0.cfg
@@ -3,29 +3,59 @@ tilesheet = data/tilesheets/test.cfg
 width = 32
 height = 32
 
-row_0  = .....................................
-row_1  = .################################....
-row_2  = .#,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,....
-row_3  = .#,,##,,,,,,,,,,,,,,,,,,,,,,,,,,,....
-row_4  = ...,,######,,,,,xxxx,,,,,,,,,,,,,....
-row_5  = ...,,.....#,,,,,x,,x,,,,,,,,,,,,,....
-row_6  = ...,,,#####,,,,,xxxx,,,,,,,,,,,,,....
-row_7  = ...,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,....
-row_8  = .....#,,,,,,,,,,,,,,,,,,,,,,,,,,,....
-row_9  = .....#,,,,,,,,,,,,,,,,,,,,,,,,,,,....
-row_10 = .....#,,,,,,,,,,,,,,,,,,,,,,,,,,,....
-row_11 = .....#,,,,,,,,,,,,,,,,,,,,,,,,,,,....
-row_12 = .....#,,,,,,,,,,,,,,,,,,,,,,,,,,,....
-row_13 = .....#,,,,,,,,,,,,,,,,,,,,,,,,,,,....
+row_0  = ..........######................
+row_1  = .#####################..........
+row_2  = .#,,,,,,,,,,,,,#,,,,,#..........
+row_3  = .##########,,,,#,,,,,#..........
+row_4  = ..........#,xx,#xxxxx#..........
+row_5  = ..........#,xx,#xxxxx#..........
+row_6  = .....######,,,,#xxxxx#..........
+row_7  = .....#,,,,,,,,,#,,,,,#..........
+row_8  = .....#,,,,,,,,,#,,,,,#..........
+row_9  = .....#,,########,,,,,#..........
+row_10 = .....#,,,,,,,,,,,,,,,#..........
+row_11 = .....#,,,,,,,,,,,,,,,#..........
+row_12 = .....#################..........
+row_13 = ................................
+row_14 = ................................
+row_15 = ................................
+row_16 = ................................
+row_17 = ................................
+row_18 = ................................
+row_19 = ................................
+row_20 = ................................
+row_21 = ................................
+row_22 = ................................
+row_23 = ................................
+row_24 = ................................
+row_25 = ................................
+row_26 = ................................
+row_27 = ................................
+row_28 = ................................
+row_29 = ................................
+row_30 = ................................
+row_31 = ................................
 
 [object_0]
 name=data/objects/gundude.cfg
-pos_0 = 8 8
-pos_1 = 9 8
-pos_2 = 10 8
-pos_3 = 8 9
-pos_4 = 9 9
-pos_5 = 10 9
+pos_0  = 12 4
+pos_1  = 13 4
+pos_2  = 12 5
+pos_3  = 13 5
+pos_4  = 10 10
+pos_5  = 11 10
+pos_6  = 12 10
+pos_7  = 13 10
+pos_8  = 14 10
+pos_9  = 15 10
+pos_10 = 16 10
+pos_11 = 18 2
+pos_12 = 19 2
+
+[object_1]
+name=data/objects/gundude2.cfg
+pos_0  = 20 2
 
 [level]
 player_start = 2 2
+combo_scale = 10
