--- a/data/maps/level_1.cfg
+++ b/data/maps/level_1.cfg
@@ -3,31 +3,81 @@ tilesheet = data/tilesheets/test.cfg
 width = 32
 height = 32
 
-row_0  = .....................................
-row_1  = .################################....
-row_2  = .#,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,....
-row_3  = .#####,,,,,,,,,,,,,,,,,,,,,,,,,,,....
-row_4  = .....######,,,,,xxxx,,,,,,,,,,,,,....
-row_5  = ..........#,,,,,x,,x,,,,,,,,,,,,,....
-row_6  = .....######,,,,,xxxx,,,,,,,,,,,,,....
-row_7  = .....#,,,,,,,,,,,,,,,,,,,,,,,,,,,....
-row_8  = .....#,,,,,,,,,,,,,,,,,,,,,,,,,,,....
-row_9  = .....#,,,,,,,,,,,,,,,,,,,,,,,,,,,....
-row_10 = .....#,,,,,,,,,,,,,,,,,,,,,,,,,,,....
-row_11 = .....#,,,,,,,,,,,,,,,,,,,,,,,,,,,....
-row_12 = .....#,,,,,,,,,,,,,,,,,,,,,,,,,,,....
-row_13 = .....#,,,,,,,,,,,,,,,,,,,,,,,,,,,....
+#                  11111111112222222222
+#        012345678901234567890123456789
+row_0  = ..........#######...............
+row_1  = ..........#######...............
+row_2  = ..........##,,,##..............
+row_3  = ..........##,x,##..............
+row_4  = ..........##,,,##............
+row_5  = ....,,,,..##,x,##..,,,,........
+row_6  = ....,##,..##,,,##..,##,........
+row_7  = ....,##,,,,,,x,,,,,,##,........
+row_8  = ....,,,,,,##,,,##..,,,,........
+row_9  = ............,,,.................
+row_10 = ........#####,#####.............
+row_11 = ........#,,,,,,,,,#.............
+row_12 = ........#,#,,,,,#,#.............
+row_13 = ........#,,,,,,,,,#.............
+row_14 = ........#,#,,,,,#,#.............
+row_15 = ........#,,,,,,,,,#.............
+row_16 = ........####,,,####............
+row_17 = ...........#,x,#...............
+row_18 = ...........#,,,#...............
+row_19 = ...........#,x,#...............
+row_20 = ...........#,,,#...............
+row_21 = ...........#,x,#...............
+row_22 = ...........#,,,#...............
+row_23 = ...........#,,,#...............
+row_24 = ........#####,#####...........
+row_25 = ........#,,,,,,,,,#............
+row_26 = ........#,#,,,,,#,#............
+row_27 = ........#,,,,,,,,,#............
+row_28 = ........#,#,,,,,#,#............
+row_29 = ........#,,,,,,,,,#............
+row_30 = ........###########............
+row_31 = ................................
 
 [object_0]
 name=data/objects/gundude.cfg
-pos_0 = 8 8
-pos_1 = 9 8
-pos_2 = 10 8
-pos_3 = 11 8
-pos_4 = 8 9
-pos_5 = 9 9
-pos_6 = 10 9
-pos_7 = 11 9
+pos_0  = 13 15
+pos_1  = 4 5
+pos_2  = 5 5
+pos_3  = 6 5
+pos_4  = 7 5
+pos_5  = 19 5
+pos_6  = 20 5
+pos_7  = 21 5
+pos_8  = 22 5
+pos_9  = 11 12
+pos_10 = 12 12
+pos_11 = 13 12
+pos_12 = 14 12
+pos_13 = 11 13
+pos_14 = 12 13
+pos_15 = 13 13
+pos_16 = 14 13
+pos_17 = 11 14
+pos_18 = 12 14
+pos_19 = 13 14
+pos_20 = 14 14
+
+[object_1]
+name=data/objects/gundude2.cfg
+pos_0  = 12 16
+pos_1  = 13 16
+pos_2  = 14 16
+pos_3  = 11 26
+pos_4  = 12 26
+pos_5  = 13 26
+pos_6  = 14 26
+pos_7  = 15 26
+
+[object_2]
+name=data/objects/gundude3.cfg
+pos_0  = 11 28
+pos_1  = 15 28
 
 [level]
-player_start = 2 2
+player_start = 13 3
+combo_scale = 10
