--- a/data/objects/gundude.cfg
+++ b/data/objects/gundude.cfg
@@ -11,10 +11,10 @@ walk_right = data/bitmaps/enemy_walk_right.cfg
 walk_up = data/bitmaps/enemy_walk_up.cfg
 walk_down = data/bitmaps/enemy_walk_down.cfg
 
-attack_left = data/bitmaps/enemy_attack_left.cfg
-attack_right = data/bitmaps/enemy_attack_right.cfg
-attack_up = data/bitmaps/enemy_attack_up.cfg
-attack_down = data/bitmaps/enemy_attack_down.cfg
+attack_left = data/bitmaps/enemy_attack_left.png
+attack_right = data/bitmaps/enemy_attack_right.png
+attack_up = data/bitmaps/enemy_attack_up.png
+attack_down = data/bitmaps/enemy_attack_down.png
 
 [Collision]
 top_left = 0 0
@@ -28,8 +28,7 @@ offset_right = 20 8
 offset_up = 8 -4
 offset_down = 8 36
 bullet = data/objects/bullet.cfg
-velocity_0 = 100 -5
-velocity_1 = 100 5
+velocity_0 = 100
 
 [AIController]
 sense_range = 100
@@ -40,6 +39,7 @@ weapon_lineup = 20
 [Destroyable]
 damage_type=enemy
 immune_dur = 0
+health = 10
 explosion=data/objects/flower_explosion.cfg
 
 [Flammable]
